# MyGO-Multi-agent_Yielding_Group_Orchestra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.multi-agent/: MEMORY.md  store.db-shm  store.db-wal
agents/: agents.yaml
benchmark/: EXPERIMENT_DESIGN.md  evaluator.py  runner.py
config/: complexity_thresholds.json  workmode.yaml
docs/: COMMON_ERRORS.md  KNOWLEDGE_BASE.md  SECURITY_AUDIT.md  SKILLS_CHEATSHEET.md  SYSTEM_ARCHITECTURE.md  agent-configuration.md  api-reference.md  architecture-analysis.md  common-errors-experiment.md  experiment-protocol-v2.md  experiment-protocol.md  security-audit-2026-03.md  security-audit-experiment-2026-03.md  simulate_architectures.py  skill-development.md  task-decomposition.md  task-queue-100.md
orchestrator/: langgraph_hub.py
prompts/: IDE_PROMPT_WORKFLOW.md  current-antigravity.txt  current-builder.txt  current-codex.txt  current-reviewer.txt  current-windsurf.txt
scripts/: analyze_experiment.py  calibration_sweep.py  emit_ide_prompt.py  experiment_runner.py  experiment_runner_v2.py  failure_analysis.py  gui_send.sh  ide_hub.py  lockctl.py  mvp_ctl.py  queue-runner.py  release.sh  run_full_pilot.sh  run_swebench_batch.py  smoke_mvp.sh  swebench_adapter.py  workmode_ctl.py  workmode_demo.sh
tests/: test_adaptive_decompose.py  test_cli_admin.py  test_cli_cancel.py  test_cli_decompose.py  test_cli_decompose_unit.py  test_cli_done.py  test_cli_go.py  test_cli_helpers.py  test_cli_history.py  test_cli_new_commands.py  test_cli_queue.py  test_cli_status.py  test_cli_watch.py  (+33 more)
(+373 files in other folders)
