[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent"
version = "0.8.1"
description = "MyGO — Multi-agent Yielding Group Orchestra. A band of AI agents orchestrated to build, review, and ship code together."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2",
    "langgraph-checkpoint>=4.0,<5",
    "langgraph-checkpoint-sqlite>=3.0.1,<4",
    "pydantic>=2.5,<3",
    "pyyaml>=6,<7",
    "jinja2>=3.1,<4",
    "click>=8,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
web = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
]
mcp = [
    "mcp>=1,<2",
]

[project.scripts]
my = "multi_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "PTH", "B", "C4", "C90", "RUF"]
ignore = ["E501", "RUF001", "RUF002"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
